add bitmap.go
